{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 22,
  "lineage": "6dcb0017-d4f6-3881-cd05-5f91e0cf82a5",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus/frontendIPConfigurations/pip-lb-proj1-udacity-eus",
                "load_balancer_rules": [
                  "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus/loadBalancingRules/rule-lb-proj1-udacity-eus"
                ],
                "name": "pip-lb-proj1-udacity-eus",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/pip-lb-proj1-udacity-eus"
              }
            ],
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus",
            "location": "eastus",
            "name": "lb-proj1-udacity-eus",
            "resource_group_name": "Azuredevops",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_public_ip.pip_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_address_pool_web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Compute/virtualMachineScaleSets/web-vmss-proj1-udacity-eus/virtualMachines/0/networkInterfaces/nic-web-vmss-proj1-udacity-eus/ipConfigurations/pip-web-vmss",
              "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Compute/virtualMachineScaleSets/web-vmss-proj1-udacity-eus/virtualMachines/3/networkInterfaces/nic-web-vmss-proj1-udacity-eus/ipConfigurations/pip-web-vmss"
            ],
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus/backendAddressPools/bep-lb-proj1-udacity-eus",
            "load_balancing_rules": [
              "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus/loadBalancingRules/rule-lb-proj1-udacity-eus"
            ],
            "loadbalancer_id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus",
            "name": "bep-lb-proj1-udacity-eus"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.pip_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe_web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus/probes/probe-lb-proj1-udacity-eus",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus",
            "name": "probe-lb-proj1-udacity-eus",
            "number_of_probes": 2,
            "port": 8080,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_public_ip.pip_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "rule_web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus/backendAddressPools/bep-lb-proj1-udacity-eus"
            ],
            "backend_port": 8080,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus/frontendIPConfigurations/pip-lb-proj1-udacity-eus",
            "frontend_ip_configuration_name": "pip-lb-proj1-udacity-eus",
            "frontend_port": 80,
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus/loadBalancingRules/rule-lb-proj1-udacity-eus",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus",
            "name": "rule-lb-proj1-udacity-eus",
            "probe_id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/lb-proj1-udacity-eus/probes/probe-lb-proj1-udacity-eus",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.web_lb",
            "azurerm_lb_backend_address_pool.backend_address_pool_web_lb",
            "azurerm_lb_probe.probe_web_lb",
            "azurerm_public_ip.pip_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_vmss",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/nic-vmss",
            "internal_domain_name_suffix": "ockwt3jes5kunm4y0553mog42b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/vnet-proj1-udacity-eus/subnets/web-subnet-proj1-udacity-eus"
              }
            ],
            "location": "eastus",
            "name": "nic-vmss",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Azuredevops"
          },
          "dependencies": [
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/nsg-proj1-udacity-eus",
            "location": "eastus",
            "name": "nsg-proj1-udacity-eus",
            "resource_group_name": "Azuredevops",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowInboundVnet",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "DenyInboundInternet",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowOutboundVnet",
                "priority": 120,
                "protocol": "*",
                "source_address_prefix": "10.0.0.0/16",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowInboundLoadBalancer",
                "priority": 110,
                "protocol": "*",
                "source_address_prefix": "20.232.19.164",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_http_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/nsg-proj1-udacity-eus/securityRules/AllowInboundLoadBalancer",
            "name": "AllowInboundLoadBalancer",
            "network_security_group_name": "nsg-proj1-udacity-eus",
            "priority": 110,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "20.232.19.164",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_public_ip.pip_lb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_inbound_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/nsg-proj1-udacity-eus/securityRules/AllowInboundVnet",
            "name": "AllowInboundVnet",
            "network_security_group_name": "nsg-proj1-udacity-eus",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "10.0.0.0/16",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_outbound_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/nsg-proj1-udacity-eus/securityRules/AllowOutboundVnet",
            "name": "AllowOutboundVnet",
            "network_security_group_name": "nsg-proj1-udacity-eus",
            "priority": 120,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "10.0.0.0/16",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "deny_inbound_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/nsg-proj1-udacity-eus/securityRules/DenyInboundInternet",
            "name": "DenyInboundInternet",
            "network_security_group_name": "nsg-proj1-udacity-eus",
            "priority": 4096,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/pip-lb-proj1-udacity-eus",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.232.19.164",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "pip-lb-proj1-udacity-eus",
            "resource_group_name": "Azuredevops",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "Application": "Proj1",
              "CreatedBy": "Terraform",
              "Environment": "Udacity"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/vnet-proj1-udacity-eus/subnets/web-subnet-proj1-udacity-eus",
            "name": "web-subnet-proj1-udacity-eus",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "vnet-proj1-udacity-eus"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/vnet-proj1-udacity-eus/subnets/web-subnet-proj1-udacity-eus",
            "network_security_group_id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/nsg-proj1-udacity-eus",
            "subnet_id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/vnet-proj1-udacity-eus/subnets/web-subnet-proj1-udacity-eus"
          },
          "dependencies": [
            "azurerm_network_security_group.web_subnet_nsg",
            "azurerm_network_security_rule.allow_http_lb",
            "azurerm_network_security_rule.allow_inbound_vnet",
            "azurerm_network_security_rule.allow_outbound_vnet",
            "azurerm_network_security_rule.deny_inbound_internet",
            "azurerm_public_ip.pip_lb",
            "azurerm_subnet.web_subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f5699570-9724-46d5-b3d8-d7ffd638dee1",
            "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/vnet-proj1-udacity-eus",
            "location": "eastus",
            "name": "vnet-proj1-udacity-eus",
            "resource_group_name": "Azuredevops",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/vnet-proj1-udacity-eus/subnets/web-subnet-proj1-udacity-eus",
                "name": "web-subnet-proj1-udacity-eus",
                "security_group": "/subscriptions/a9ab978b-a5d4-42b1-a453-fe2690ceb40f/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/nsg-proj1-udacity-eus"
              }
            ],
            "tags": {
              "Application": "Proj1",
              "CreatedBy": "Terraform",
              "Environment": "Udacity"
            }
          }
        }
      ]
    }
  ]
}